--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>E X T E R I C 0 N</title>
   </head>
   <body>
     <header></header>
